welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:8: error: value or is not a member of Boolean
  if(day==0 or day==6){
            ^