welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  var alarmS = "7:00";
  var alarmW = "10:00";
  if(vacation){
    alarmS = "10:00";
    alarmW = "off";
  }
  if(day==0 or day==6){
    return alarmW;
  }
  return alarmS;
}